--- a/build_tensorflow/configs/odroidxu4.conf
+++ b/build_tensorflow/configs/odroidxu4.conf
@@ -17,7 +17,7 @@ TF_BUILD_VARS+=" TF_NEED_S3=0"
 TF_BUILD_VARS+=" TF_NEED_IGNITE=0"
 TF_BUILD_VARS+=" TF_NEED_ROCM=0"
 
-BAZEL_VERSION="0.19.0"
+BAZEL_VERSION="0.19.2"
 # BAZEL_AVALIABLE_RAM=1536 # MB
 # BAZEL_AVALIABLE_CPU=0.5  # number of cpu cores (1.0 epresenting single full core)
 # BAZEL_AVALIABLE_IO=1.0   # workstation I/O capability (with 1.0 representing average workstation)
@@ -33,7 +33,7 @@ BAZEL_COPT_FLAGS+=" --config=noaws --config=nogcp --config=nohdfs --config=nokaf
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package"
 
 CROSSTOOL_COMPILER="yes"
-CROSSTOOL_URL="https://developer.arm.com/-/media/Files/downloads/gnu-a/8.2-2019.01/gcc-arm-8.2-2019.01-x86_64-arm-linux-gnueabihf.tar.xz"
-CROSSTOOL_DIR="gcc-arm-8.2-2019.01-x86_64-arm-linux-gnueabihf/"
+CROSSTOOL_URL="https://releases.linaro.org/components/toolchain/binaries/6.3-2017.05/arm-linux-gnueabihf/gcc-linaro-6.3.1-2017.05-x86_64_arm-linux-gnueabihf.tar.xz"
+CROSSTOOL_DIR="gcc-linaro-6.3.1-2017.05-x86_64_arm-linux-gnueabihf/"
 CROSSTOOL_NAME="arm-linux-gnueabihf"
 CROSSTOOL_WHEEL_ARCH="linux_armv7l"
