--- a/build_tensorflow/Dockerfile.stretch
+++ b/build_tensorflow/Dockerfile.stretch
@@ -11,7 +11,7 @@ RUN dpkg --add-architecture armhf && dpkg --add-architecture arm64 \
         libpython-dev:arm64 libpython-all-dev:arm64 libpython3-dev:arm64 libpython3-all-dev:arm64
 
 # NOTE: forcing gcc 4.9 as default (prevents internal compiler error: in emit_move_insn, at expr.c bug in gcc-6 of stretch)
-RUN echo "deb http://httpredir.debian.org/debian/ jessie main contrib non-free" > /etc/apt/sources.list.d/jessie.list \
+RUN echo "deb http://ftp.us.debian.org/debian/ jessie main contrib non-free" > /etc/apt/sources.list.d/jessie.list \
     && apt-get update && apt-get install -y --allow-downgrades g++=4:4.9.2-2 gcc=4:4.9.2-2 \
     && rm -f /etc/apt/sources.list.d/jessie.list \
     && rm -rf /var/lib/apt/lists/*
