--- a/build_tensorflow/configs/odroidc2.conf
+++ b/build_tensorflow/configs/odroidc2.conf
@@ -27,7 +27,7 @@ BAZEL_COPT_FLAGS="--copt=-march=armv8-a+crc+simd --copt=-mtune=cortex-a53 --copt
 BAZEL_COPT_FLAGS+=" --copt=-std=c++11 --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE=S_IWUSR"
 BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations"
 BAZEL_COPT_FLAGS+=" --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI --noincompatible_strict_action_env"
-BAZEL_COPT_FLAGS+=" --config=v2 --config=noaws --config=nohdfs --define tensorflow_mkldnn_contraction_kernel=0"
+BAZEL_COPT_FLAGS+=" --config=v2 --config=noaws --config=nohdfs --define tensorflow_mkldnn_contraction_kernel=0 --define=raspberry_pi_with_neon=true"
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package"
 
 CROSSTOOL_COMPILER="yes"
