--- a/build_tensorflow/configs/rpi_one_openblas.conf
+++ b/build_tensorflow/configs/rpi_one_openblas.conf
@@ -32,7 +32,7 @@ BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations"
 BAZEL_COPT_FLAGS+=" --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI --noincompatible_strict_action_env"
 BAZEL_COPT_FLAGS+=" --copt=-isystem --copt=${OPENBLAS_PATH}/include/ --linkopt=-L${OPENBLAS_PATH}/lib/ --linkopt=-l:libopenblas.a"
 BAZEL_COPT_FLAGS+=" --config=v2 --config=noaws --config=nohdfs --define tensorflow_mkldnn_contraction_kernel=0"
-BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package"
+BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=@local_config_arm_compiler//:toolchain //tensorflow:libtensorflow.so //tensorflow:libtensorflow_framework.so //tensorflow/tools/pip_package:build_pip_package"
 
 CROSSTOOL_COMPILER="yes"
 CROSSTOOL_EXTRA_INCLUDE="${OPENBLAS_PATH}/include/"
