--- a/build_tensorflow/Dockerfile.stretch
+++ b/build_tensorflow/Dockerfile.stretch
@@ -9,10 +9,10 @@ RUN dpkg --add-architecture armhf && dpkg --add-architecture arm64 \
         libpython3-dev:armhf libpython3-all-dev:armhf \
         libpython3-dev:arm64 libpython3-all-dev:arm64
 
-# NOTE: forcing gcc 4.9 as default (prevents internal compiler error: in emit_move_insn, at expr.c bug in gcc-6 of stretch)
-RUN echo "deb http://ftp.us.debian.org/debian/ jessie main contrib non-free" > /etc/apt/sources.list.d/jessie.list \
-    && apt-get update && apt-get install -y --allow-downgrades g++=4:4.9.2-2 gcc=4:4.9.2-2 \
-    && rm -f /etc/apt/sources.list.d/jessie.list \
+# NOTE: forcing gcc 8.3 as default (prevents internal compiler error: in emit_move_insn, at expr.c bug in gcc-6 of stretch)
+RUN echo "deb http://ftp.us.debian.org/debian/ buster main contrib non-free" > /etc/apt/sources.list.d/buster.list \
+    && apt-get update && apt-get install -y gcc-8 g++-8 gcc=4:8.3.0-1 g++=4:8.3.0-1 \
+    && rm -f /etc/apt/sources.list.d/buster.list \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pip3 install -U --user keras_applications==1.0.5 --no-deps \
