--- a/build_tensorflow/Dockerfile.bullseye
+++ b/build_tensorflow/Dockerfile.bullseye
@@ -4,10 +4,12 @@ RUN dpkg --add-architecture armhf && dpkg --add-architecture arm64 \
     && apt-get update && apt-get install -y \
         openjdk-11-jdk automake autoconf libpng-dev \
         curl zip unzip libtool swig zlib1g-dev pkg-config git wget xz-utils \
-        python3-numpy python3-pip python3-mock \
+        python3-pip python3-mock \
         libpython3-dev libpython3-all-dev \
         libpython3-dev:armhf libpython3-all-dev:armhf \
         libpython3-dev:arm64 libpython3-all-dev:arm64
+
+RUN pip install "numpy<1.19.0"
 
 # NOTE: forcing gcc 8.3 as default (prevents internal compiler error: in emit_move_insn, at expr.c bug in gcc-6 of stretch)
 RUN echo "deb http://ftp.us.debian.org/debian/ buster main contrib non-free" > /etc/apt/sources.list.d/buster.list \
