--- a/build_tensorflow/Dockerfile.bullseye
+++ b/build_tensorflow/Dockerfile.bullseye
@@ -9,7 +9,7 @@ RUN dpkg --add-architecture armhf && dpkg --add-architecture arm64 \
         libpython3-dev:armhf libpython3-all-dev:armhf \
         libpython3-dev:arm64 libpython3-all-dev:arm64
 
-RUN pip install "numpy<1.19.0"
+RUN pip install --no-cache-dir "numpy<1.19.0"
 
 # NOTE: forcing gcc 8.3 as default (prevents internal compiler error: in emit_move_insn, at expr.c bug in gcc-6 of stretch)
 RUN echo "deb http://ftp.us.debian.org/debian/ buster main contrib non-free" > /etc/apt/sources.list.d/buster.list \
@@ -17,8 +17,8 @@ RUN echo "deb http://ftp.us.debian.org/debian/ buster main contrib non-free" > /
     && rm -f /etc/apt/sources.list.d/buster.list \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip3 install -U --user keras_applications==1.0.8 --no-deps \
-    && pip3 install -U --user keras_preprocessing==1.1.0 --no-deps \
+RUN pip3 install --no-cache-dir -U --user keras_applications==1.0.8 --no-deps \
+    && pip3 install --no-cache-dir -U --user keras_preprocessing==1.1.0 --no-deps \
     && ldconfig
 
 RUN /bin/bash -c "update-alternatives --install /usr/bin/python python /usr/bin/python3 150"
