--- a/build_tensorflow/Dockerfile.stretch
+++ b/build_tensorflow/Dockerfile.stretch
@@ -15,9 +15,9 @@ RUN echo "deb http://ftp.us.debian.org/debian/ buster main contrib non-free" > /
     && rm -f /etc/apt/sources.list.d/buster.list \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip3 install -U --user keras_applications==1.0.8 --no-deps \
-    && pip3 install -U --user keras_preprocessing==1.1.0 --no-deps \
-    && pip3 install portpicker \
+RUN pip3 install --no-cache-dir -U --user keras_applications==1.0.8 --no-deps \
+    && pip3 install --no-cache-dir -U --user keras_preprocessing==1.1.0 --no-deps \
+    && pip3 install --no-cache-dir portpicker \
     && ldconfig
 
 RUN /bin/bash -c "update-alternatives --install /usr/bin/python python /usr/bin/python3 150"
